# qt-quick-for-python-examples

./: README.md
minimal-qt-quick/: pyproject.toml
minimal-qt-quick-for-fsharp/: README.md  main.fs
minimal-qt-quick/minimal_qt_quick/: main.py
minimal-qt-quick/minimal_qt_quick/qml/: Main.qml
