[tool.poetry]
name = "minimal-qt-quick"
version = "0.1.0"
description = ""
authors = ["bmitc <65685447+bmitc@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pyside6 = "^6.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
